clean up and clear out crufty css and mobile shizz

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
   <div class="navbar">
     <div class="title">Omega II Counter</div>
+    <!-- <a class="resetIcon"><input type="submit" value="Reset" class="title" onclick="resetValues()"></a> -->
+      <a class="helpIcon" href="#modal">?</a>
   </div>
 
-//Display card buttons
   <div class="row">
     <div class="column">
       <div class="content">
-        <a class="helpIcon" href="#modal">?</a>
 
         <h1 class="firstHeader">Card Value</h1>
         <ul class="card-buttons">
@@ -66,9 +66,8 @@
 
         <br class="mobileHide">
       </div>
-    </div> //End Column 1
+    </div>
 
-//Display advantage information
     <div class="column">
       <div class="divTable">
         <div class="divTableBody">
@@ -101,9 +100,8 @@
       <input type="submit" value="Reset" class="reset-button" onclick="resetValues()">
       <br>
       <br class="miniSpacing">
-    </div> //End Column 2
+    </div>
 
-//Display optimal strategy table for current true count
     <div class="column">
       <div class="divTable">
         <div class="divTableBody">
@@ -115,15 +113,14 @@
           </div>
         </div>
       </div>
-    </div> //End Column 3
+    </div>
+  </div>
 
-  </div> //End Row class
-
-<!-- jQuery -->
+  <!-- jQuery -->
   <script src="js/jquery.js"></script>
-<!-- Counter JavaScript -->
+  <!-- Counter JavaScript -->
   <script src="js/custom.js"></script>
-<!-- Modal JavaScript -->
+  <!-- Modal JavaScript -->
   <script src="js/remodal.min.js"></script>
 
   </body>
