band-aid for strat charts; aces logic broken

--- a/index.html
+++ b/index.html
@@ -99,13 +99,19 @@
       </div>
     </div>
 
+<!-- TODO: the Reset button needs to be added to a third column
+     TODO: The strategy asset is too large even with flex; new buttons
+           for `Hard Totals`, Soft Totals, and `Pairs` need to be added that pull up
+           each portion of the strategy card respectively. -->
+
     <div class="column">
       <div>
-        <a><img src="./assets/strategy.png" id="imageStrategy" /></a>
+        <a><img src="./assets/strategy.png" id="strategy" /></a>
+
       </div>
     </div>
   </div>
- 
+
   <!-- jQuery -->
   <script src="js/jquery.js"></script>
   <!-- Counter JavaScript -->
